syntax = "proto3";

package aggregator;

// The Attestor service definition.
service Attestor {
  // Queries attestations from an attestor.
  rpc QueryAttestations(QueryRequest) returns (AttestationsResponse);
}

// QueryRequest is a request to query attestations.
message QueryRequest {
  // The minimum height to query attestations from.
  uint64 min_height = 1;
}

// Attestation is a signature of a state at a specific height.
message Attestation {
  // The height of the state.
  uint64 height = 1;
  // The state being attested to.
  bytes state = 2; // 32 bytes
  // The signature of the state and height.
  bytes signature = 3;
}

// AttestationsResponse is a response from an attestor.
message AttestationsResponse {
  // The public key of the attestor.
  bytes pubkey = 1; // 65 bytes
  // A list of attestations.
  repeated Attestation attestations = 2;
}

